<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Veloxdroid</string>
    <string name="action_settings">Settings</string>
    <string name="account_email">example@gmail.com</string>
    <string name="title_account_email">Account EMail</string>
    <string name="notify_options">Notify options</string>
    <string name="text_set_distance">Set notification distance</string>
    <string name="vibration_duration">Vibration duration</string>
    <string name="cb_sounds">Sounds</string>
    <string name="cb_vibration">Vibration</string>
    <string name="downloadFile_button">Download file dei dati</string>
    <string name="title_activity_download_file">DownloadFileActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="button_login">Login</string>
    <string name="button_visitatore">Visitatore</string>
    <string name="button_register">Register</string>
    <string name="button_send_autovelox">Send Autovelox</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="switch_auto_synch">Auto Synch</string>
    <string name="btn_feedback">Feedback</string>
    <string name="btn_deleteAutovelox">Delete</string>
    <string name="logoutTitle">Logout</string>
    <string name="deleteUserTitle">Delete User</string>
    <string name="textLatit">Latitude:</string>
    <string name="textLongit">Longitude:</string>
    <string name="textSpeed">Speed:</string>
    <string name="textAutoveloxSpeed">Autovelox:</string>
    <string name="valueLatit">0</string>
    <string name="valueLongit">0</string>
    <string name="valueSpeed">0 km/h</string>
    <string name="valueAutoveloxSpeed">None</string>
    <string name="buttonFlush">Flush</string>

</resources>