<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/textViewTitleAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_account_email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitleAccountEmail"
        android:layout_below="@+id/textViewTitleAccountEmail"
        android:text="@string/account_email" />

    <CheckBox
        android:id="@+id/checkBoxVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxSounds"
        android:layout_below="@+id/checkBoxSounds"
        android:text="@string/cb_vibration" />

    <TextView
        android:id="@+id/textViewTitleNotifyOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewTitleAccountEmail"
        android:layout_below="@+id/textViewAccountEmail"
        android:layout_marginTop="20dp"
        android:text="@string/notify_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBoxSounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAccountEmail"
        android:layout_below="@+id/textViewTitleNotifyOptions"
        android:text="@string/cb_sounds" />

    <EditText
        android:id="@+id/editTextSetDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSetDistance"
        android:layout_below="@+id/textViewSetDistance"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewSetDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxVibration"
        android:layout_centerVertical="true"
        android:text="@string/text_set_distance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textVibrationDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitleNotifyOptions"
        android:layout_below="@+id/editTextSetDistance"
        android:layout_marginTop="17dp"
        android:text="@string/vibration_duration"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarVibrationDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSetDistance"
        android:layout_below="@+id/textVibrationDuration"
        android:enabled="false" />

    <Switch
        android:id="@+id/switchAutoSynch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textVibrationDuration"
        android:layout_below="@+id/seekBarVibrationDuration"
        android:layout_marginTop="20dp"
        android:text="@string/switch_auto_synch" />

</RelativeLayout>