<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NavigationActivity" >

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/send_autovelox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:text="@string/button_send_autovelox"
        android:onClick="doSendAutovelox" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/send_autovelox"
        android:layout_marginTop="67dp"
        android:text="@string/btn_feedback"
        android:visibility="gone" 
        android:onClick="doSendFeedback"/>

    <Button
        android:id="@+id/btn_deleteAutovelox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_feedback"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/txtInfo"
        android:text="@string/btn_deleteAutovelox"
        android:visibility="gone" 
        android:onClick="doDeleteAutovelox"/>

</RelativeLayout>
